changed display of widget cogs

--- a/public/assignment/views/Widget/widget-list.view.client.html
+++ b/public/assignment/views/Widget/widget-list.view.client.html
@@ -8,7 +8,8 @@
                 Widgets
             </a>
             <p class="navbar-text pull-right">
-                <a href=#/user/{{model.route.uid}}/website/{{model.route.wid}}/page/{{model.route.pid}}/widget/new" class="navbar-link">
+                <a href=#/user/{{model.route.uid}}/website/{{model.route.wid}}/page/{{model.route.pid}}/widget/new"
+                   class="navbar-link">
                       <span class="glyphicon glyphicon-plus">
                       </span>
                 </a>
@@ -19,20 +20,33 @@
 
 <div class="container">
     <div ng-repeat="widget in model.widgets" ng-switch on="widget.widgetType">
-        <div ng-switch-when="HEADER">
-            <ng-include src="'views/widget/widget-header.view.client.html'"></ng-include>
-        </div>
-        <div ng-switch-when="IMAGE">
-            <ng-include src="'views/widget/widget-image.view.client.html'"></ng-include>
-        </div>
-        <div ng-switch-when="YOUTUBE">
-            <ng-include src="'views/widget/widget-youtube.view.client.html'"></ng-include>
-        </div>
-        <a href="#/user/{{model.route.uid}}/website/{{model.route.wid}}/page/{{model.route.pid}}/widget/{{widget._id}}" class="pull-right">
-            <span class="glyphicon glyphicon-cog"></span>
-            <span class="glyphicon glyphicon-play"></span>
-        </a>
+        <table>
+            <tr>
+                <td>
+                    <div ng-switch-when="HEADER">
+                        <ng-include src="'views/widget/widget-header.view.client.html'"></ng-include>
+                    </div>
+                    <div ng-switch-when="IMAGE">
+                        <ng-include src="'views/widget/widget-image.view.client.html'"></ng-include>
+                    </div>
+                    <div ng-switch-when="YOUTUBE">
+                        <ng-include src="'views/widget/widget-youtube.view.client.html'"></ng-include>
+                    </div>
+                    <div ng-switch-when="HTML">
+                        <div ng-bind-html="model.getSafeHtml(widget)"></div>
+                    </div>
+                </td>
+                <td class="pull-right">
+                    <a href="#/user/{{model.route.uid}}/website/{{model.route.wid}}/page/{{model.route.pid}}/widget/{{widget._id}}"
+                       >
+                        <span class="glyphicon glyphicon-cog"></span>
+                        <span class="glyphicon glyphicon-play"></span>
+                    </a>
+                </td>
+            </tr>
+        </table>
     </div>
+
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
