continued setting up edit

--- a/public/assignment/views/User/register.view.client.html
+++ b/public/assignment/views/User/register.view.client.html
@@ -1,6 +1,7 @@
 <div class="container">
     <h2>Register</h2>
-    <input class="form-control"
+    <input ng
+            class="form-control"
            placeholder="username"
            type="text"/>
     <input class="form-control"
