--- a/public/assignment/views/User/register.view.client.html
+++ b/public/assignment/views/User/register.view.client.html
@@ -1,15 +1,17 @@
 <div class="container">
     <h2>Register</h2>
-    <input ng
+    <input ng-model="username"
             class="form-control"
            placeholder="username"
            type="text"/>
-    <input class="form-control"
+    <input ng-model="password"
+            class="form-control"
            placeholder="password"
            type="password">
-    <input class="form-control"
+    <input ng-model="passconfirm"
+            class="form-control"
            placeholder="verify password"
            type="password">
-    <a class="btn btn-primary btn-block" href="#/profile">Register</a>
+    <a class="btn btn-primary btn-block" ng-click="model.register(username, password, passconfirm)">Register</a>
     <a class="btn btn-danger btn-block" href="#/login">Cancel</a>
 </div>
