got create website to work

--- a/public/assignment/views/Website/website-new.view.client.html
+++ b/public/assignment/views/Website/website-new.view.client.html
@@ -10,7 +10,7 @@
                 New Website
             </a>
             <p class="navbar-text pull-right">
-                <a ng-click="model.createWebsite(model.route.uid, website)" class="navbar-link">
+                <a ng-click="model.createWebsite(website.name)" class="navbar-link">
                       <span class="glyphicon glyphicon-ok">
                       </span>
                 </a>
