got new page to work

--- a/public/assignment/views/Page/page-list.view.client.html
+++ b/public/assignment/views/Page/page-list.view.client.html
@@ -9,7 +9,7 @@
                 Pages
             </a>
             <p class="navbar-text pull-right">
-                <a href="#/user/{{model.route.uid}}/website/{{model.route.wid}}/new" class="navbar-link">
+                <a href="#/user/{{model.route.uid}}/website/{{model.route.wid}}/page/new" class="navbar-link">
                       <span class="glyphicon glyphicon-plus">
                       </span>
                 </a>
