--- a/public/assignment/views/Page/page-new.view.client.html
+++ b/public/assignment/views/Page/page-new.view.client.html
@@ -9,7 +9,7 @@
                 New Page
             </a>
             <p class="navbar-text pull-right">
-                <a ng-click="model.createPage(websiteId, page)" class="navbar-link">
+                <a ng-click="model.createPage(page.name)" class="navbar-link">
                       <span class="glyphicon glyphicon-ok">
                       </span>
                 </a>
@@ -20,12 +20,12 @@
 
 <form>
     <div class="form-group">
-        <label for="exampleInputEmail1">Name</label>
-        <input ng-model="model.page.name" type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+        <label for="pageName">Name</label>
+        <input ng-model="page.name" type="text" class="form-control" id="pageName" placeholder="Email">
     </div>
     <div class="form-group">
         <label for="exampleInputPassword1">Description</label>
-        <input ng-model="model.page.description" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <input ng-model="page.description" type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
 </form>
 
