--- a/public/assignment/CSS/style.css
+++ b/public/assignment/CSS/style.css
@@ -28,3 +28,13 @@ img {
     max-width: 100%;
     max-height: 100%;
 }
+table {
+    border: 5px;
+    border-left: thin solid;
+    border-top: thin solid;
+    border-bottom: thin solid;
+    border-right: thin solid;
+}
+#sortable { list-style-type: none; margin: 0; padding: 0; width: 60%; }
+#sortable li { margin: 0 3px 3px 3px; padding: 0.4em; padding-left: 1.5em; font-size: 1.4em; height: 18px; }
+#sortable li span { position: absolute; margin-left: -1.3em; }
