widget sorting works

--- a/public/assignment/views/Widget/widget-list.view.client.html
+++ b/public/assignment/views/Widget/widget-list.view.client.html
@@ -18,8 +18,8 @@
     </div>
 </nav>
 
-<div class="container sortable" >
-    <div class="sortable" ng-repeat="widget in model.widgets" ng-switch on="widget.widgetType">
+<div class="sortable-widgets" >
+    <div  ng-repeat="widget in model.widgets" ng-switch on="widget.widgetType">
         <table width="100%">
             <tr>
                 <td>
