--- a/public/assignment/views/Page/page-new.view.client.html
+++ b/public/assignment/views/Page/page-new.view.client.html
@@ -21,11 +21,11 @@
 <form>
     <div class="form-group">
         <label for="pageName">Name</label>
-        <input ng-model="page.name" type="text" class="form-control" id="pageName" placeholder="Email">
+        <input ng-model="page.name" type="text" class="form-control" id="pageName" placeholder="Name">
     </div>
     <div class="form-group">
-        <label for="exampleInputPassword1">Description</label>
-        <input ng-model="page.description" type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <label for="pageDescription">Description</label>
+        <textarea ng-model="page.description" type="text" class="form-control" id="pageDescription" rows="10" placeholder="Description"></textarea>
     </div>
 </form>
 
