--- a/public/assignment/views/Widget/widget-html.view.client.html
+++ b/public/assignment/views/Widget/widget-html.view.client.html
@@ -21,18 +21,23 @@
                 </div>
             </div>
         </nav>
-        <form>
-            <div class="form-group">
-                <label for="exampleInputEmail1">Name</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name">
-            </div>
-            <div class="form-group">
-                <label for="description"> HTML</label>
-                <input type="text" class="form-control" id="description" placeholder="Text">
-            </div>
-            <a type="submit" href="widget-list.view.client.html" class="btn btn-primary btn-block">Upload HTML</a>
-            <a type="submit" href="widget-list.view.client.html" class="btn btn-danger btn-block">Delete</a>
-        </form>
+
+        <div class="input-group">
+            <input type="text" class="form-control" aria-label="...">
+      <span class="input-group-addon">
+        <input type="checkbox" aria-label="...">
+      </span>
+        </div>
+
+        <div text-angular ng-model="model.html"
+             ta-toolbar="[['h1','h2','h3'],['bold','italics','underline','strikeThrough'],['ul','ol'], ['justifyLeft','justifyCenter','justifyRight','justifyFull'],['indent','outdent'],['html']]"></div>
+
+        <div>
+            {{model.html}}
+        </div>
+
+        <div ng-bind-html="model.html"></div>
+
         <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container-fluid">
                 <div class="navbar-footer">
