--- a/public/assignment/views/User/login.view.client.html
+++ b/public/assignment/views/User/login.view.client.html
@@ -11,8 +11,16 @@
     <input ng-model="password" class="form-control"
            placeholder="password"
            type="password">
-        <a ng-click="model.login(username, password)" class="btn btn-primary btn-block">Login</a>
-        <a type="submit" href="#/register" class="btn btn-success btn-block">Register</a>
+    <a ng-click="model.login(username, password)" class="btn btn-primary btn-block">Login</a>
+    <a href="/auth/google" class="btn btn-danger btn-block">
+        <span class="fa fa-google-plus"></span>
+        Google
+    </a>
+    <a href="/auth/facebook" class="btn btn-primary btn-block">
+        <span class="fa fa-facebook"></span>
+        Facebook
+    </a>
+    <a type="submit" href="#/register" class="btn btn-success btn-block">Register</a>
 
 
 </div>
