--- a/public/assignment/views/User/login.view.client.html
+++ b/public/assignment/views/User/login.view.client.html
@@ -4,13 +4,18 @@
         {{model.error}}
     </div>
     <h1>Login</h1>
-
-    <input ng-model="username" class="form-control"
+<form novalidate class="css-form">
+    <input ng-model="username"
+           class="form-control"
            placeholder="username"
-           type="text"/>
-    <input ng-model="password" class="form-control"
+           type="text"
+           required/>
+    <input ng-model="password"
+           class="form-control"
            placeholder="password"
-           type="password">
+           type="password"
+           required/>
+    </form>
     <a ng-click="model.login(username, password)" class="btn btn-primary btn-block">Login</a>
     <a href="/auth/google" class="btn btn-danger btn-block">
         <span class="fa fa-google-plus"></span>
