--- a/public/assignment/views/Page/page-edit.view.client.html
+++ b/public/assignment/views/Page/page-edit.view.client.html
@@ -19,10 +19,10 @@
     </div>
 </nav>
 
-<form>
+<form novalidate class="css-form">
     <div class="form-group">
-        <label for="exampleInputEmail1">Application Name</label>
-        <input ng-model="model.page.name" type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+        <label for="pageName">Page Name</label>
+        <input ng-model="model.page.name" type="email" class="form-control" id="pageName" placeholder="Email" required>
     </div>
     <div class="form-group">
         <label for="exampleInputPassword1">Application Description</label>
