--- a/public/assignment/views/Page/page-new.view.client.html
+++ b/public/assignment/views/Page/page-new.view.client.html
@@ -18,10 +18,10 @@
     </div>
 </nav>
 
-<form>
+<form novalidate class="css-form">
     <div class="form-group">
         <label for="pageName">Name</label>
-        <input ng-model="page.name" type="text" class="form-control" id="pageName" placeholder="Name">
+        <input ng-model="page.name" type="text" class="form-control" id="pageName" placeholder="Name" required>
     </div>
     <div class="form-group">
         <label for="pageDescription">Description</label>
