--- a/public/assignment/views/User/register.view.client.html
+++ b/public/assignment/views/User/register.view.client.html
@@ -1,17 +1,26 @@
 <div class="container">
     <h2>Register</h2>
+    <form novalidate class="css-form">
     <input ng-model="username"
-            class="form-control"
+           class="form-control"
            placeholder="username"
-           type="text"/>
+           type="text"
+           required/>
     <input ng-model="password"
-            class="form-control"
+           class="form-control"
            placeholder="password"
-           type="password">
+           type="password"
+           required/>
     <input ng-model="passconfirm"
-            class="form-control"
+           class="form-control"
            placeholder="verify password"
-           type="password">
+           type="password"
+           required
+           pw-check="password"/>
+        </form>
+    <span class="msg-error" ng-show="myForm.pw2.$error.pwmatch">
+    Passwords don't match.
+  </span>
     <a class="btn btn-primary btn-block" ng-click="model.register(username, password, passconfirm)">Register</a>
     <a class="btn btn-danger btn-block" href="#/login">Cancel</a>
 </div>
