--- a/public/assignment/views/Website/website-new.view.client.html
+++ b/public/assignment/views/Website/website-new.view.client.html
@@ -19,10 +19,10 @@
     </div>
 </nav>
 
-<form>
+<form novalidate class="css-form">
     <div class="form-group">
         <label for="websitename">Name</label>
-        <input ng-model="website.name" type="text" class="form-control" id="websitename" placeholder="Name">
+        <input ng-model="website.name" type="text" class="form-control" id="websitename" placeholder="Name" required>
     </div>
     <div class="form-group">
         <label for="websiteDescription">Description</label>
