--- a/public/assignment/views/website/website-edit.view.client.html
+++ b/public/assignment/views/website/website-edit.view.client.html
@@ -1,9 +1,7 @@
-
-
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-footer">
-            <a class="navbar-brand"href="#/user/{{model.route.uid}}/website">
+            <a class="navbar-brand" href="#/user/{{model.route.uid}}/website">
                 <scan class="glyphicon glyphicon-menu-left"></scan>
             </a>
             <a class="navbar-brand" href="website-new.view.client.html">
@@ -19,20 +17,21 @@
     </div>
 </nav>
 
-<form>
+<form novalidate class="css-form">
     <div class="form-group">
         <label for="websiteName">Website Name</label>
         <input ng-model="model.website.name"
                type="text"
                class="form-control"
                id="websiteName"
-               placeholder="alice"/>
+               placeholder="alice"
+               required/>
     </div>
     <div class="form-group">
         <label for="description">Website Description</label>
         <textarea ng-model="model.website.description" rows="5" id="description" class="form-control">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</textarea>
     </div>
-</form>
+</>
 
 <a class="btn btn-danger btn-block" ng-click="model.deleteWebsite()">Delete</a>
 
